# GUI-Agents

autoagent/: Cargo.toml  CreateAgentContextMenu.ps1  RemoveAgentContextMenu.ps1
autoagent/src/: main.rs
autoagent/src/app/: events.rs  layout.rs  mod.rs  render.rs  ui.rs  window.rs
autoagent/src/config/: mod.rs
autoagent/src/events/: mod.rs
autoagent/src/logging/: mod.rs
autoagent/src/prompt/: buffers.rs  codex.rs  execution.rs  mod.rs  state.rs
autoagent/src/runtime/: mod.rs
codexagent/: Build.ps1  Cargo.toml  CreateCodexContextMenu.ps1  CreateCodexContextMenuWin11.ps1  RemoveCodexContextMenu.ps1  RemoveCodexContextMenuWin11.ps1  build.rs
codexagent/.claude/: settings.local.json
codexagent/packaging/win11/: AppxManifest.xml
codexagent/src/: main.rs  notify.rs  status.rs
codexagent/src/app/: events.rs  history.rs  init.rs  layout.rs  mod.rs  output.rs  position.rs  render.rs  ui.rs  window.rs
codexagent/src/config/: mod.rs
codexagent/src/context_menu/: lib.rs
codexagent/src/events/: mod.rs
codexagent/src/logging/: mod.rs
codexagent/src/prompt/: buffers.rs  codex.rs  execution.rs  mod.rs  state.rs
codexagent/src/runtime/: mod.rs
config docs/: CLAUDE.md
config docs/commands/: team-changes.md
terminal only/: CreateClaudeContextMenu.ps1  CreateCodexContextMenu.ps1  CreateWSLClaudeContextMenu.ps1  RemoveClaudeContextMenu.ps1  RemoveCodexContextMenu.ps1  RemoveWSLClaudeContextMenu.ps1
