[package]
name = "codexagent"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "codexagent_contextmenu"
path = "src/context_menu/lib.rs"
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
raw-window-handle = "0.6"
serde_json = "1"
time = { version = "0.3", features = ["local-offset", "parsing"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_IO", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Pipes", "Win32_System_Power", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
